<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Places category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/places_category">
        <TextView
            android:id="@+id/places"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/places_category" />
    </FrameLayout>

    <!-- Shopping category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shopping_category">
        <TextView
            android:id="@+id/shopping"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/shopping_category" />
    </FrameLayout>

    <!-- Restaurant category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/restaurants_category">
        <TextView
            android:id="@+id/restaurant"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/restaurant_category" />
    </FrameLayout>

    <!-- Hotels category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hotels_category">
        <TextView
            android:id="@+id/hotels"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/hotels_category" />
    </FrameLayout>

    <!-- MovieHalls category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/movie_halls_category">
        <TextView
            android:id="@+id/movieHalls"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/movie_halls_category" />
    </FrameLayout>
</LinearLayout>
